--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "eslint-plugin-react": "^7.19.0",
-    "husky": "^4.2.3",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "typescript": "^3.8.3"
+    "@ant-design/pro-components": "^2.3.51",
+    "@ant-design/pro-layout": "^7.6.0",
+    "@fontsource/montserrat": "^4.5.13",
+    "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.1.2",
+    "eslint-plugin-react": "^7.31.11",
+    "firebase": "^9.15.0",
+    "husky": "^8.0.3",
+    "npm-check-updates": "^16.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,14 +44,14 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "awesome-typescript-loader": "^5.2.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.5",
-    "source-map-loader": "^0.2.4"
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.2",
+    "source-map-loader": "^4.0.1"
   },
   "husky": {
     "hooks": {
